# yolov7

./: pyproject.toml
